--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
-    <string name="app_name">My Applicationennew</string>
+    <string name="app_name">yonet</string>
 
-    <string name="menu_button_description">Menu button</string>
+    <string name="menu_button_description">Menu Button</string>
+
 </resources>
